Revert "1.21.1"
This reverts commit 140d821b461db1e7d22e37157804183da698fcf2.